--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express-error-handler": "^1.0.1",
     "method-override": "^1.0.0",
     "morgan": "^1.0.0",
+    "mysql": "^2.7.0",
+    "sequelize": "^3.3.1",
     "underscore": "^1.8.3"
   }
 }
