Prodouct model add price and cost, shopping list csv to json format

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "express": "~4.1.1",
     "express-error-handler": "^1.0.1",
     "express-session": "^1.11.3",
+    "filepicker": "^0.2.0",
     "method-override": "^1.0.0",
     "morgan": "^1.0.0",
     "mysql": "^2.7.0",
     "passport": "^0.2.2",
     "passport-http": "^0.2.2",
+    "request": "^2.58.0",
     "sequelize": "^3.3.1",
     "underscore": "^1.8.3"
   }
